Use european date formatter.

--- a/src/main/webapp/jsf/rider/Create.xhtml
+++ b/src/main/webapp/jsf/rider/Create.xhtml
@@ -34,7 +34,7 @@
                     <h:inputText id="letztetour"
                                  value="#{riderController.selected.letztetour}"
                                  title="#{bundle.CreateRiderTitle_letztetour}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy" />
+                        <f:convertDateTime pattern="dd.MM.yyyy" />
                     </h:inputText>
                     <h:outputLabel value="#{bundle.CreateRiderLabel_fullName}"
                                    for="fullName" />
