--- a/src/main/webapp/jsf/rider/Edit.xhtml
+++ b/src/main/webapp/jsf/rider/Edit.xhtml
@@ -40,7 +40,7 @@
                     <h:inputText id="letztetour"
                                  value="#{riderController.selected.letztetour}"
                                  title="#{bundle.EditRiderTitle_letztetour}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy" />
+                        <f:convertDateTime pattern="dd.MM.yyyy" />
                     </h:inputText>
                     <h:outputLabel value="#{bundle.EditRiderLabel_fullName}"
                                    for="fullName" />
