No input necessary as the field has a default.

--- a/src/main/webapp/jsf/rider/Create.xhtml
+++ b/src/main/webapp/jsf/rider/Create.xhtml
@@ -27,8 +27,7 @@
                     <h:inputText id="anzahltouren"
                                  value="#{riderController.selected.anzahltouren}"
                                  title="#{bundle.CreateRiderTitle_anzahltouren}"
-                                 required="true"
-                                 requiredMessage="#{bundle.CreateRiderRequiredMessage_anzahltouren}"/>
+                                 required="false"/>
                     <h:outputLabel value="#{bundle.CreateRiderLabel_letztetour}"
                                    for="letztetour" />
                     <h:inputText id="letztetour"
