--- a/src/main/webapp/jsf/rider/List.xhtml
+++ b/src/main/webapp/jsf/rider/List.xhtml
@@ -3,14 +3,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.ListRiderTitle}"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
+            <h:form styleClass="jsfcrud_list_form" id="form">
+
+                <p:growl id="messages" showDetail="true"/>
+                <p:contextMenu for="riders" widgetVar="iMenu">
+                    <p:menuitem value="Edit Cell" icon="ui-icon-search" onclick="PF('itemsTable').showCellEditor();
+                            return false;"/>
+                    <p:menuitem value="Hide Menu" icon="ui-icon-close" onclick="PF('iMenu').hide()"/>
+                </p:contextMenu>
+
                 <h:panelGroup id="messagePanel" layout="block">
                     <h:messages errorStyle="color: red" infoStyle="color: green"
                                 layout="table"/>
@@ -25,59 +34,59 @@
                     <h:commandLink action="#{riderController.next}"
                                    value="#{bundle.Next} #{riderController.pagination.pageSize}"
                                    rendered="#{riderController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{riderController.items}" var="item"
-                                 border="0" cellpadding="2" cellspacing="0"
-                                 rowClasses="jsfcrud_odd_row,jsfcrud_even_row"
-                                 rules="all" style="border:solid 1px">
-                        <h:column>
+                    <p:dataTable id="riders"
+                                 value="#{riderController.items}" var="item"
+                                 editable="true"
+                                 editMode="cell"
+                                 paginator="true" rows="25"
+                                 widgetVar="itemsTable"
+                                 style="border:solid 1px">
+                        <p:ajax event="cellEdit" listener="#{riderController.onCellEdit}" update=":form:messages" />
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_id}"/>
                             </f:facet>
                             <h:outputText value="#{item.id}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_riderNumber}"/>
                             </f:facet>
                             <h:outputText value="#{item.riderNumber}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_anzahltouren}"/>
                             </f:facet>
                             <h:outputText value="#{item.anzahltouren}"/>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_letztetour}"/>
                             </f:facet>
                             <h:outputText value="#{item.letztetour}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd.MM.yyyy" />
                             </h:outputText>
-                        </h:column>
-                        <h:column>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_fullName}"/>
                             </f:facet>
-                            <h:outputText value="#{item.fullName}"/>
-                        </h:column>
-                        <h:column>
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{item.fullName}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{item.fullName}" style="width:96%"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListRiderTitle_status}"/>
                             </f:facet>
-                            <h:outputText value="#{item.status}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandLink action="#{riderController.prepareView}"
-                                           value="#{bundle.ListRiderViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{riderController.prepareEdit}"
-                                           value="#{bundle.ListRiderEditLink}"/>
-                        </h:column>
-                    </h:dataTable>
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{item.status}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{item.status}" style="width:96%"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+                    </p:dataTable>
                 </h:panelGroup>
                 <br />
                 <h:commandLink action="#{riderController.prepareCreate}"
