--- a/src/main/webapp/jsf/customer/List.xhtml
+++ b/src/main/webapp/jsf/customer/List.xhtml
@@ -30,7 +30,9 @@
                         <f:facet name="header">
                             <p:outputPanel>
                                 <h:outputText value="Search all fields:" />
-                                <h:inputText id="globalFilter" onkeyup="PF('customersTable').filter()" />
+                                <h:inputText id="globalFilter"
+                                             onkeyup="PF('customersTable').filter()"
+                                             onchange="PF('customersTable').filter()" />
                             </p:outputPanel>
                         </f:facet>
 
