Use buttons compatible with primefaces mobile 0.9.4 and 1.0 SNAPSHOT.

--- a/src/main/webapp/m/index.xhtml
+++ b/src/main/webapp/m/index.xhtml
@@ -22,9 +22,9 @@
                 </f:facet>
             </pm:header>
             <pm:content>
-                <p:button outcome="/m/workorder/List"
+                <p:button href="/faces/m/workorder/List.xhtml"
                           value="Views ${bundle.ViewWorkorderShowAllLink}"/>
-                <p:button outcome="/m/workorderPanel/List"
+                <p:button href="/faces/m/workorderPanel/List.xhtml"
                           value="Panels ${bundle.ViewWorkorderShowAllLink}"/>
             </pm:content>
             <pm:footer>
